--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EZ搜公司工程冒險</title>
-    
+
     <!-- Open Graph Meta Tags for better link preview -->
     <meta property="og:title" content="EZ搜公司工程冒險">
     <meta property="og:description" content="參加不同的工程項目，做出選擇影響公司的發展。">
-    <meta property="og:image" content="https://your-image-url.com/preview-image.jpg">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1732692699579-592f37bf4cdf">
     <meta property="og:url" content="https://blueone1225.github.io/litMAGICgame/">
 
     <style>
