--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     function startGame() {
         currentStep = 0;
-        typeWriter("歡迎來到公司工程冒險！你是一位工程師，剛加入了昀坦工程行，接下來你需要在工作中做出選擇，讓公司順利發展。", () => {
+        typeWriter("歡迎來到公司工程冒險！你是一位工程師，剛加入了昀坦有限公司，接下來你需要在工作中做出選擇，讓公司順利發展。", () => {
             updateButtons("參加設備安裝項目", "參加國際貿易項目");
         });
     }
