--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>工程行冒險</title>
+    <title>工程冒險</title>
 
     <!-- Open Graph Meta Tags for better link preview -->
     <meta property="og:title" content="公司工程冒險">
